@@ -1,38 +1,45 @@
 package net.threetag.palladium.power.ability;
 
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.MapCodec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 import net.minecraft.client.player.AbstractClientPlayer;
 import net.minecraft.resources.ResourceLocation;
 import net.threetag.palladium.client.dynamictexture.TextureReference;
 import net.threetag.palladium.client.renderer.entity.PlayerSkinHandler;
+import net.threetag.palladium.power.energybar.EnergyBarUsage;
+import net.threetag.palladium.util.PlayerModelChangeType;
 import net.threetag.palladium.util.SkinTypedValue;
 import net.threetag.palladium.util.context.DataContext;
-import net.threetag.palladium.util.property.ChangedPlayerModelTypeProperty;
-import net.threetag.palladium.util.property.IntegerProperty;
-import net.threetag.palladium.util.property.PalladiumProperty;
-import net.threetag.palladium.util.property.SkinTypedTextureReferenceProperty;
+
+import java.util.List;
 
 public class SkinChangeAbility extends Ability {
 
-    public static final PalladiumProperty<SkinTypedValue<TextureReference>> TEXTURE = new SkinTypedTextureReferenceProperty("texture").configurable("Texture for the skin change");
-    public static final PalladiumProperty<ChangedPlayerModelTypeProperty.ChangedModelType> MODEL_TYPE = new ChangedPlayerModelTypeProperty("model_type").configurable("Model type for the player. 'normal' = Wide-armed Steve model; 'slim' = Slim-armed Alex model; 'keep' = Does not change the player's default model");
-    public static final PalladiumProperty<Integer> PRIORITY = new IntegerProperty("priority").configurable("Priority for the skin (in case multiple skin changes are applied, the one with the highest priority will be used)");
+    public static final MapCodec<SkinChangeAbility> CODEC = RecordCodecBuilder.mapCodec(instance ->
+            instance.group(
+                    SkinTypedValue.codec(TextureReference.CODEC).fieldOf("texture").forGetter(ab -> ab.texture),
+                    PlayerModelChangeType.CODEC.optionalFieldOf("model_type", PlayerModelChangeType.KEEP).forGetter(ab -> ab.modelChangeType),
+                    Codec.INT.optionalFieldOf("priority", 50).forGetter(ab -> ab.priority),
+                    propertiesCodec(), conditionsCodec(), energyBarUsagesCodec()
+            ).apply(instance, SkinChangeAbility::new));
 
-    public SkinChangeAbility() {
-        this.withProperty(TEXTURE, new SkinTypedValue<>(TextureReference.normal(new ResourceLocation("textures/entity/zombie/drowned.png"))));
-        this.withProperty(MODEL_TYPE, ChangedPlayerModelTypeProperty.ChangedModelType.KEEP);
-        this.withProperty(PRIORITY, 50);
+    public final SkinTypedValue<TextureReference> texture;
+    public final PlayerModelChangeType modelChangeType;
+    public final int priority;
+
+    public SkinChangeAbility(SkinTypedValue<TextureReference> texture, PlayerModelChangeType modelChangeType, int priority, AbilityProperties properties, AbilityConditions conditions, List<EnergyBarUsage> energyBarUsages) {
+        super(properties, conditions, energyBarUsages);
+        this.texture = texture;
+        this.modelChangeType = modelChangeType;
+        this.priority = priority;
     }
 
     @Override
-    public boolean isEffect() {
-        return true;
-    }
-
-    @Override
-    public String getDocumentationDescription() {
-        return "Allows you to change a player's skin.";
+    public AbilitySerializer<SkinChangeAbility> getSerializer() {
+        return AbilitySerializers.SKIN_CHANGE.get();
     }
 
     @Environment(EnvType.CLIENT)
@@ -40,26 +47,34 @@ public class SkinChangeAbility extends Ability {
 
         @Override
         public ResourceLocation getSkin(AbstractClientPlayer player, ResourceLocation previousSkin, ResourceLocation defaultSkin) {
-            var abilities = AbilityUtil.getEnabledEntries(player, Abilities.SKIN_CHANGE.get()).stream().filter(AbilityInstance::isEnabled).sorted((a1, a2) -> a2.getProperty(SkinChangeAbility.PRIORITY) - a1.getProperty(SkinChangeAbility.PRIORITY)).toList();
+            var abilities = AbilityUtil.getEnabledInstances(player, AbilitySerializers.SKIN_CHANGE.get()).stream().filter(AbilityInstance::isEnabled).sorted((a1, a2) -> ((SkinChangeAbility) a2.getAbility()).priority - ((SkinChangeAbility) a1.getAbility()).priority).toList();
 
             if (!abilities.isEmpty()) {
-                var ability = abilities.get(0);
-                return ability.getProperty(SkinChangeAbility.TEXTURE).get(player).getTexture(DataContext.forAbility(player, ability));
+                var ability = abilities.getFirst();
+                return ((SkinChangeAbility) ability.getAbility()).texture.get(player).getTexture(DataContext.forAbility(player, ability));
             }
 
             return previousSkin;
         }
 
         @Override
-        public ChangedPlayerModelTypeProperty.ChangedModelType getModelType(AbstractClientPlayer player) {
-            var abilities = AbilityUtil.getEnabledEntries(player, Abilities.SKIN_CHANGE.get()).stream().filter(AbilityInstance::isEnabled).sorted((a1, a2) -> a2.getProperty(SkinChangeAbility.PRIORITY) - a1.getProperty(SkinChangeAbility.PRIORITY)).toList();
+        public PlayerModelChangeType getModelType(AbstractClientPlayer player) {
+            var abilities = AbilityUtil.getEnabledInstances(player, AbilitySerializers.SKIN_CHANGE.get()).stream().filter(AbilityInstance::isEnabled).sorted((a1, a2) -> ((SkinChangeAbility) a2.getAbility()).priority - ((SkinChangeAbility) a1.getAbility()).priority).toList();
 
             if (!abilities.isEmpty()) {
-                var ability = abilities.get(0);
-                return ability.getProperty(SkinChangeAbility.MODEL_TYPE);
+                var ability = abilities.getFirst();
+                return ((SkinChangeAbility) ability.getAbility()).modelChangeType;
             }
 
             return PlayerSkinHandler.SkinProvider.super.getModelType(player);
+        }
+    }
+
+    public static class Serializer extends AbilitySerializer<SkinChangeAbility> {
+
+        @Override
+        public MapCodec<SkinChangeAbility> codec() {
+            return CODEC;
         }
     }
 
